# optimal-adp

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: 2015_stats.csv  2016_stats.csv  2017_stats.csv  2018_stats.csv  2019_stats.csv  2020_stats.csv  2021_stats.csv  2022_stats.csv  2023_stats.csv  2024_stats.csv
docs/: FUTURE_TASKS.md  TODO.md  TODO_v2.md  problem_statement.md
optimal_adp/: __init__.py  cli.py  compute_vbr.py  config.py  data_io.py  draft_simulator.py  main.py  models.py  optimizer.py  regret.py  regret_optimizer.py  validation.py
tests/: __init__.py  test_config.py  test_data_io.py  test_draft_simulator.py  test_models.py  test_optimizer.py  test_regret.py  test_regret_optimizer.py  test_setup.py  test_validation.py
tests/fixtures/: sample_stats.csv
