[project]
name = "optimal_adp"
version = "0.1.0"
description = ""
authors = [
    {name = "Elliott Imhoff",email = "elliott.imhoff@sentera.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
